<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Signin"
    android:gravity="center_horizontal"
    android:padding="20dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="40dp"
        android:text="@string/displaySignIn"
        android:textAlignment="center"

        android:textSize="34sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:id="@+id/USN"
        android:inputType="text"
        android:layout_marginVertical="10dp"
        android:autofillHints="Name"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:id="@+id/pass"
        android:inputType="textPassword"
        android:autofillHints="Pass"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSignIn"
        android:layout_marginVertical="10dp"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/flashOne"
            android:inputType="textLongMessage"
            android:text="@string/flashOne"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/flashTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/flashOne"
            android:inputType="textLongMessage"
            android:text="@string/flashTwo"
            android:textColor="#3F51B5"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>